# Orchestration-machine-learning

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
dags/: retrain_dag.py
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.train
frontend/: app.py
src/: api.py  config.py  data.py  features.py  predict_client.py  train.py  train_models.py  train_optuna.py
