[project]
name = "rendu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.137.0",
    "mlflow>=3.13.0",
    "optuna>=4.9.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
    "xgboost>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]
